// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventCounterParty receive matches snapshot 1`] = `
<div
  className="css-text-901oao"
  dir="auto"
  style={
    Object {
      "WebkitTextDecorationStyle": "none",
      "color": "rgba(85,85,85,1.00)",
      "direction": "ltr",
      "fontFamily": "Roboto",
      "fontSize": "15px",
      "fontWeight": "normal",
      "textAlign": "center",
      "textDecorationStyle": "none",
      "textTransform": "capitalize",
    }
  }
>
  <span
    className="css-text-901oao css-textHasAncestor-16my406"
    dir="auto"
    style={
      Object {
        "WebkitTextDecorationStyle": "none",
        "color": "rgba(0,0,0,1.00)",
        "direction": "ltr",
        "fontFamily": "Roboto",
        "fontSize": "10px",
        "fontWeight": "500",
        "textAlign": "center",
        "textDecorationStyle": "none",
        "textTransform": "none",
      }
    }
  >
    From
    :
  </span>
  <span
    className="css-text-901oao css-textHasAncestor-16my406"
    dir="auto"
    style={
      Object {
        "WebkitTextDecorationStyle": "none",
        "color": "rgba(0,0,0,1.00)",
        "direction": "ltr",
        "fontFamily": "Roboto",
        "fontSize": "16px",
        "fontWeight": "700",
        "textAlign": "center",
        "textDecorationStyle": "none",
        "textTransform": "none",
      }
    }
  >
    Misao Matimbo
  </span>
</div>
`;

exports[`EventCounterParty send matches snapshot 1`] = `
<div
  className="css-text-901oao"
  dir="auto"
  style={
    Object {
      "WebkitTextDecorationStyle": "none",
      "color": "rgba(85,85,85,1.00)",
      "direction": "ltr",
      "fontFamily": "Roboto",
      "fontSize": "15px",
      "fontWeight": "normal",
      "textAlign": "center",
      "textDecorationStyle": "none",
      "textTransform": "capitalize",
    }
  }
>
  <span
    className="css-text-901oao css-textHasAncestor-16my406"
    dir="auto"
    style={
      Object {
        "WebkitTextDecorationStyle": "none",
        "color": "rgba(0,0,0,1.00)",
        "direction": "ltr",
        "fontFamily": "Roboto",
        "fontSize": "10px",
        "fontWeight": "500",
        "textAlign": "center",
        "textDecorationStyle": "none",
        "textTransform": "none",
      }
    }
  >
    To
    :
  </span>
  <span
    className="css-text-901oao css-textHasAncestor-16my406"
    dir="auto"
    style={
      Object {
        "WebkitTextDecorationStyle": "none",
        "color": "rgba(0,0,0,1.00)",
        "direction": "ltr",
        "fontFamily": "Roboto",
        "fontSize": "16px",
        "fontWeight": "700",
        "textAlign": "center",
        "textDecorationStyle": "none",
        "textTransform": "none",
      }
    }
  >
    Misao Matimbo
  </span>
</div>
`;

exports[`EventCounterParty withdraw matches snapshot 1`] = `
<div
  className="css-text-901oao"
  dir="auto"
  style={
    Object {
      "WebkitTextDecorationStyle": "none",
      "color": "rgba(85,85,85,1.00)",
      "direction": "ltr",
      "fontFamily": "Roboto",
      "fontSize": "15px",
      "fontWeight": "normal",
      "textAlign": "center",
      "textDecorationStyle": "none",
      "textTransform": "capitalize",
    }
  }
>
  <span
    className="css-text-901oao css-textHasAncestor-16my406"
    dir="auto"
    style={
      Object {
        "WebkitTextDecorationStyle": "none",
        "color": "rgba(0,0,0,1.00)",
        "direction": "ltr",
        "fontFamily": "Roboto",
        "fontSize": "10px",
        "fontWeight": "500",
        "textAlign": "center",
        "textDecorationStyle": "none",
        "textTransform": "none",
      }
    }
  >
    From
    :
  </span>
  <span
    className="css-text-901oao css-textHasAncestor-16my406"
    dir="auto"
    style={
      Object {
        "WebkitTextDecorationStyle": "none",
        "color": "rgba(0,0,0,1.00)",
        "direction": "ltr",
        "fontFamily": "Roboto",
        "fontSize": "16px",
        "fontWeight": "700",
        "textAlign": "center",
        "textDecorationStyle": "none",
        "textTransform": "none",
      }
    }
  >
    Misao Matimbo
  </span>
</div>
`;
